--- a/SEP2/src/client/view/Manager/ManageBusiness/ManageBusinessView.fxml
+++ b/SEP2/src/client/view/Manager/ManageBusiness/ManageBusinessView.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
@@ -54,6 +57,22 @@
       </Pane>
    </center>
    <right>
-      <Pane prefHeight="858.0" prefWidth="711.0" BorderPane.alignment="CENTER" />
+      <Pane prefHeight="858.0" prefWidth="711.0" BorderPane.alignment="CENTER">
+         <children>
+            <Text layoutX="282.0" layoutY="128.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Economy" wrappingWidth="92.609375">
+               <font>
+                  <Font size="22.0" />
+               </font>
+            </Text>
+            <BarChart fx:id="bar_chart" layoutX="71.0" layoutY="166.0" title="Income/Expenses">
+              <xAxis>
+                <CategoryAxis side="BOTTOM" />
+
+              </xAxis>
+              <yAxis>
+                <NumberAxis label="Money" side="LEFT" />
+              </yAxis>
+            </BarChart>
+         </children></Pane>
    </right>
 </BorderPane>
