--- a/SEP2/src/client/view/Salesman/SEditPolicy/SEditPoliceView.fxml
+++ b/SEP2/src/client/view/Salesman/SEditPolicy/SEditPoliceView.fxml
@@ -104,7 +104,7 @@
             <children>
                 <HBox alignment="CENTER_LEFT" prefHeight="56.0" prefWidth="298.0">
                     <children>
-                        <Button mnemonicParsing="false" text="Back">
+                        <Button mnemonicParsing="false" onAction="#onBack" text="Back">
                             <HBox.margin>
                                 <Insets left="10.0" />
                             </HBox.margin>
@@ -113,7 +113,7 @@
                 </HBox>
                 <HBox alignment="CENTER_RIGHT" prefHeight="56.0" prefWidth="304.0">
                     <children>
-                        <Button mnemonicParsing="false" text="Save">
+                        <Button mnemonicParsing="false" onAction="#onSave" text="Save">
                             <HBox.margin>
                                 <Insets right="10.0" />
                             </HBox.margin>
